[metadata]
name = mlpro-int-tensorboard
version = 0.0.1
author = Mochammad Rizky Diprasetya
author_email = software@rizkydiprasetya.com
description = MLPro: Integration Tensorboard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mypackage.readthedocs.io
project_urls = 
    Bug Tracker = https://mypackage.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    dill
    numpy
    matplotlib
    multiprocess
    mlpro
